@@ -122,6 +122,7 @@ const char *helpText =
   "F2 online help\n"
   "F3,F4 export\n"
   "F5 debug\n"
+  "F8 publish\n"
   "F9, C-r run\n"
   "F10, set command$\n";
 
