@@ -1,3 +1,6 @@
+2017-08-13 (0.12.10)
+	SDL: Added F8 publish command
+
 2017-08-08 (0.12.10)
 	COMMON: Fix PROGLINE when using multi-line strings
 
